# bevy-fp-template

./: Cargo.toml  README.md
src/: main.rs
src/components/: lookaround.rs  mod.rs  movement.rs
src/plugins/: first_person_control.rs  mod.rs
src/plugins/game/: main.rs  mod.rs
src/plugins/levels/: main.rs  main_menu.rs  mod.rs  pause_menu.rs
src/resources/: game_config.rs  game_settings.rs  mod.rs
src/states/: mod.rs
src/systems/: activate_physics.rs  deactivate_physics.rs  first_person_lookaround.rs  first_person_movement.rs  mod.rs  pausing.rs  player.rs
src/systems/setup/: mod.rs
