[package]
name = "bevy-fp-template"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1

[profile.dev.package.bevy]
opt-level = 1

[profile.dev.package.bevy_rapier3d]
opt-level = 3

[dependencies]
# https://github.com/bevyengine/bevy
bevy = { version = "0.6.0" }

# https://github.com/alexcrichton/toml-rs
toml = { version = "0.5.8" }

# https://github.com/serde-rs/serde
serde = { version = "1.0.97", features = ["derive"] }

# https://github.com/dimforge/bevy_rapier (https://github.com/dimforge/rapier3d)
bevy_rapier3d = { version = "0.12.1", git = "https://github.com/dimforge/bevy_rapier", commit = "11605d04160668502c452f17db26dc6b98e9d26e", tag = "v0.12.1" }